--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <div class="container">
         <section id="timer">
-          <h1 class="current-time">11:50 pm</h1>
+          <h1 class="current-time">pm</h1>
           <nav class="grid--row">
             <li class="timer" id="1">
               <div class="grid--2-col">
@@ -91,7 +91,7 @@
             </li>
           </nav>
         </section>
-        <section id="stopwatch">
+        <section id="stopwatch" class="hidden">
           <h1 class="current-stopwatch">01:02:15</h1>
           <div class="flexbox--stopwatch">
             <button class="stopwatch-btn-round">+ Round</button>
