--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="container">
         <section id="timer">
           <h1 class="current-time">pm</h1>
-          <nav class="grid--row">
-            <li class="timer" id="1">
+          <nav class="grid--row" id="list-timers">
+            <!-- <li class="timer" id="1">
               <div class="grid--2-col">
                 <div class="progressing-left">
                   <div class="flexbox-2">
@@ -51,8 +51,8 @@
                   </button>
                 </div>
               </div>
-            </li>
-            <li class="timer" id="2">
+            </li> -->
+            <!-- <li class="timer" id="2">
               <div class="grid--2-col grid--break">
                 <div class="break-left">
                   <div class="flexbox-2 breakstate">
@@ -83,7 +83,7 @@
                   </button>
                 </div>
               </div>
-            </li>
+            </li> -->
             <li class="timer">
               <button class="btn btn-add-timer" id="delete-timer-4">
                 Add Timer
@@ -99,7 +99,7 @@
             <button class="stopwatch-btn-pause">Pause</button>
             <button class="stopwatch-btn-resume" hidden>Resume</button>
           </div>
-          <nav class="grid--row scroll-lap">
+          <nav class="grid--row scroll-lap" id="list-stopwatch">
             <li class="lap flexbox-2" id="1">
               <h2 class="lap-name">Lap 1</h2>
               <h2 class="lap-time">01:02:15</h2>
