feat: play stopwatch | add round

--- a/index.html
+++ b/index.html
@@ -91,75 +91,21 @@
             </li>
           </nav>
         </section>
-        <section id="stopwatch" class="hidden">
-          <h1 class="current-stopwatch">01:02:15</h1>
+        <section id="stopwatch" class="">
+          <h1 class="current-stopwatch">00:00:00</h1>
           <div class="flexbox--stopwatch">
-            <button class="stopwatch-btn-round">+ Round</button>
-            <button class="stopwatch-btn-reset" hidden>Reset</button>
-            <button class="stopwatch-btn-pause">Pause</button>
-            <button class="stopwatch-btn-resume" hidden>Resume</button>
+            <button class="stopwatch stopwatch-btn-round hidden">
+              + Round
+            </button>
+            <button class="stopwatch stopwatch-btn-reset">Reset</button>
+            <button class="stopwatch stopwatch-btn-pause hidden">Pause</button>
+            <button class="stopwatch stopwatch-btn-resume">Resume</button>
           </div>
           <nav class="grid--row scroll-lap" id="list-stopwatch">
-            <li class="lap flexbox-2" id="1">
+            <!-- <li class="lap flexbox-2" id="1">
               <h2 class="lap-name">Lap 1</h2>
               <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="2">
-              <h2 class="lap-name">Lap 2</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
-            <li class="lap flexbox-2" id="3">
-              <h2 class="lap-name">Lap 3</h2>
-              <h2 class="lap-time">01:02:15</h2>
-            </li>
+            </li> -->
           </nav>
         </section>
       </div>
