feat: enhance timer functionality | add break feature - Updated timer display to include break functionality with a new audio alert. - Added active/inactive styles for navigation tab.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   <body>
     <header class="header-main">
       <nav class="nav-tab">
-        <button class="nav-tab-btn btn-timer">Timer</button>
-        <button class="nav-tab-btn btn-stopwatch">Stopwatch</button>
+        <button class="nav-tab-btn btn-timer btn-tab-active">Timer</button>
+        <button class="nav-tab-btn btn-stopwatch btn-tab-inactive">
+          Stopwatch
+        </button>
       </nav>
     </header>
     <main>
@@ -28,30 +30,6 @@
         <section id="timer">
           <h1 class="current-time">pm</h1>
           <nav class="grid--row" id="list-timers">
-            <!-- <li class="timer" id="1">
-              <div class="grid--2-col">
-                <div class="progressing-left">
-                  <div class="flexbox-2">
-                    <h2 class="timer-name">Workout</h2>
-                    <h2 class="timer-duration">20:00</h2>
-                  </div>
-                  <div class="progress-container">
-                    <div class="progress-bar"></div>
-                  </div>
-                </div>
-                <div class="progressing-right">
-                  <button class="btn btn-start">
-                    <img src="img/icon-pause.svg" alt="Close-button" />
-                  </button>
-                  <button class="btn btn-stop">
-                    <img src="img/icon-stop.svg" alt="Close-button" />
-                  </button>
-                  <button class="btn btn-close" id="delete-timer-1">
-                    <img src="img/icon-close.svg" alt="Close-button" />
-                  </button>
-                </div>
-              </div>
-            </li> -->
             <!-- <li class="timer" id="2">
               <div class="grid--2-col grid--break">
                 <div class="break-left">
