feat : change placeholder

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             type="number"
             id="input-duration-h"
             class="modal__input modal__input--hours"
-            placeholder="hours"
+            placeholder="min"
             required
           />
           <input
             type="number"
             id="input-duration-min"
             class="modal__input modal__input--minutes"
-            placeholder="min"
+            placeholder="sec"
             required
           />
         </div>
